feat: add new crud category
